--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="C:\Users\franc\OneDrive\Documentos\Repoo\Pv_TP1_Grupo10\main.css">
 </head>
 <body>
-    
+    <h1>Hola jasjjasj</h1>
 </body>
 </html>
