--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="C:\Users\franc\OneDrive\Documentos\Repoo\Pv_TP1_Grupo10\main.css">
+    <title>TP1 Grupo10</title>
+    <link rel="stylesheet" href="main.css">
+    <link rel="shortcut icon" href="https://th.bing.com/th/id/OIP.WqNv81suz9dfSmodrweJgAHaHa?rs=1&pid=ImgDetMain">
 </head>
 <body>
-    <h1>Hola jasjjasj</h1>
+    <header>
+        <h1 style="color: rgb(0, 175, 0); text-align: center;">Cultura de Brasil</h1>
+    </header>
+    <nav>
+
+    </nav>
+    <footer>
+
+    </footer>
 </body>
 </html>
