--- a/index.html
+++ b/index.html
@@ -6,16 +6,41 @@
     <title>TP1 Grupo10</title>
     <link rel="stylesheet" href="main.css">
     <link rel="shortcut icon" href="https://th.bing.com/th/id/OIP.WqNv81suz9dfSmodrweJgAHaHa?rs=1&pid=ImgDetMain">
+    <style>
+        footer{
+            
+            background-color: rgb(9, 173, 173);
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 40px;
+            text-align: center;
+        }
+        section{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
+<div>
     <header>
-        <h1 style="color: rgb(0, 175, 0); text-align: center;">Cultura de Brasil</h1>
+    <h1 style="color: rgb(0, 175, 0); text-align: center; font-size: 50px;">Cultura de Brasil</h1>
     </header>
     <nav>
-
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="contacto.html">Contactos</a></li>
+            <li><a href="museos.html">Museos</a></li>
+        </ul>
     </nav>
+    <section>
+        <img src="/Pv_TP1_Grupo10/Imagenes/Dinho.jpg" alt="" width= 100px>
+        <img src="/Pv_TP1_Grupo10/Imagenes/Brazil.png" alt="" width= 200px>
+        <img src="/Pv_TP1_Grupo10/Imagenes/Bandera_Brasil.png" alt="" width="100px">
+    </section>
     <footer>
-
+        Derechos reservados
     </footer>
+</div>
 </body>
 </html>
