--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TP1 Grupo10</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="shortcut icon" href="https://th.bing.com/th/id/OIP.WqNv81suz9dfSmodrweJgAHaHa?rs=1&pid=ImgDetMain">
+    <link rel="shortcut icon" href="logo.ico">
     <style>
         footer{
             
