--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li><img src="logo.ico" alt="" width="20"></li>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="contacto.html">Contactos</a></li>
-            <li><a href="museos.html">Museos</a></li>
+            <li><a href="museo sencillo.html">Museos</a></li>
         </ul>
     </nav>
     <section>
