--- a/museo sencillo.html
+++ b/museo sencillo.html
@@ -16,7 +16,8 @@
             <img src="/Pv_TP1_Grupo10-1/Imagenes museo/pic(1).jpg" alt="" width= 300px> <img src="/Pv_TP1_Grupo10-1/Imagenes museo/pic(2).jpg" alt="" width="300px"> <img src="/Pv_TP1_Grupo10-1/Imagenes museo/pic(3).jpg" alt="" width="300px"><img src="/Pv_TP1_Grupo10-1/Imagenes museo/pic(4).jpg" alt="" width="300px"><img src="/Pv_TP1_Grupo10-1/Imagenes museo/pic(5).jpg" alt="" width="300px">
             <p>El Museo do Amanhã (Museo del Mañana) es un museo de ciencia y tecnología ubicado en el puerto de Río de Janeiro, Brasil. Su objetivo es explorar temas sobre el futuro de la humanidad a través de la ciencia, la sostenibilidad y la innovación. Diseñado por el arquitecto Santiago Calatrava, el museo ofrece una experiencia interactiva y reflexiva, centrada en el cambio climático, la biodiversidad y los avances tecnológicos.</p>
             <a href="https://museudoamanha.org.br/" target="_blank">Visita el Museo do Amanhã</a>
-
+            <br>
+            <a href="index.html">Volver a la pagina principal</a>
             <hr>
         <div>
             <h2 style="color: rgb(0, 0, 0); text-align: left; font-size: 30px;">2. Pinacoteca del Estado</h2>
