--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <ul> 
             <li><img src="logo.ico" alt="logo brasil" width="20"></li>
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="contacto.html">Contactos</a></li>
+            <li><a href="contacto.html">Contactanos</a></li>
             <li><a href="museo sencillo.html">Museos</a></li>
         </ul>
     </nav>
