probando comandos de formulario

--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,9 @@
     <title>Contactanos</title>
 </head>
 <body>
-    <form action="Como se usa esto??? xdddd"></form>
+    <input type="text">
+    <button>Enviar datos</button>
+    <textarea name="" id=""></textarea>
+    <label for="que es esto??"></label>
 </body>
 </html>
