cambio de fonts

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>TP1 Grupo10</title>
     <link rel="stylesheet" href="main.css">
     <link rel="shortcut icon" href="logo.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <style>
         footer{
             background-color: rgb(5, 117, 117);
@@ -117,7 +120,7 @@
                 <p>Si te interesa saber mas acerca de la Amazonas  <a href="https://www.ecologiaverde.com/selva-amazonica-que-es-donde-esta-animales-y-tribus-4603.html" target="_blank">Click aqui</a></p>
             </ul>
             </article>
-            <img src="https://th.bing.com/th/id/R.442569d76f242e4136d9853fc130f1fd?rik=jBEe16PL36%2byTg&pid=ImgRaw&r=0" alt="foto tomada con un dron del amazonas" width="370px">
+            <img src="https://th.bing.com/th/id/R.442569d76f242e4136d9853fc130f1fd?rik=jBEe16PL36%2byTg&pid=ImgRaw&r=0" alt="foto tomada con un dron del amazonas" width="390px">
         </div>
         <hr>
         <div>
@@ -129,7 +132,7 @@
         </div>
     </section>
     <footer>
-        <p><strong>Derechos Reservados      </strong><a href="contacto.html">Contactanos</a></p>
+        <p><strong>Derechos Reservados      </strong><a href="contacto.html">Contactanos </a></p>
         
     </footer>
 </div>
