--- a/contacto.html
+++ b/contacto.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="contacto.css">
     <title>Contactanos</title>
 </head>
-<body>
-    <input type="text">
-    <button>Enviar datos</button>
-    <textarea name="" id=""></textarea>
-    <label for="que es esto??"></label>
+<body >
+    
+        <form action="" id="contenedor">
+        <h1 style="text-align: center;color: rgb(197, 90, 90);">Formulario</h1>
+        <input type="text" name="Nombre" placeholder="Ingrese nombre">
+        <input type="email" placeholder="Ingrese email " style="margin: 5%;">
+        <textarea name="" id="" style=" margin: 5%; padding: 5%;"></textarea>
+        <button style="margin: 5%;">Enviar datos</button>
+        <p style="color: rgb(155, 70, 70);">Muchas Gracias!!</p>
+        </form>
 </body>
 </html>
