cambios en el footer

--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     <style>
         footer{
             background-color: rgb(5, 117, 117);
-            position: relative;
+            
             bottom: 0;
             width: 100%;
-            height: 40px;
+            height: 100px;
             text-align: center;
             margin-top: 0px;
-            padding-top: 5px;
+            padding-top: 2%;
             overflow: visible;
+            justify-content: center;
         }
         section{
             text-align: center;
@@ -29,7 +30,7 @@
 <body>
 <div>
     <header>
-    <h1 style="color: rgb(3, 88, 3); text-align: center; font-size: 50px; background-color: rgb(145, 228, 200) ;" >Cultura de Brasil</h1>
+    <h1 style="color: rgb(0, 65, 0); text-align: center; font-size: 50px; background-color: rgb(5, 117, 117) ;" >Cultura de Brasil</h1>
     </header>
     <nav class="nav">
         <ul> 
@@ -149,8 +150,12 @@
         </div>
     </section>
     <footer>
-        <p style="color: white;"><strong> Derechos Reservados      </strong><a href="contacto.html">Contactanos </a></p>
-        
+        <h5 style="color: white;"><strong>Derechos Reservados</strong></h5>
+        <ul class="lista_footer">
+            <a href="index.html">Inicio</a></li>
+            <li><a href="museo sencillo.html">Museos</a></li>
+            <li><a href="contacto.html">Contactanos</a></li>
+        </ul></p>
     </footer>
 </div>
 </body>
