--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <style>
         footer{
             background-color: rgb(5, 117, 117);
-            
             bottom: 0;
             width: 100%;
             height: 100px;
@@ -152,9 +151,9 @@
     <footer>
         <h5 style="color: white;"><strong>Derechos Reservados</strong></h5>
         <ul class="lista_footer">
-            <a href="index.html">Inicio</a></li>
-            <li><a href="museo sencillo.html">Museos</a></li>
-            <li><a href="contacto.html">Contactanos</a></li>
+            <a href="index.html" style="color: white;">Inicio</a></li>
+            <li><a href="museo sencillo.html" style="color: white;">Museos</a></li>
+            <li><a href="contacto.html" style="color: white;">Contactanos</a></li>
         </ul></p>
     </footer>
 </div>
