--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             height: 100px;
             text-align: center;
             margin-top: 0px;
-            padding-top: 2%;
+            
             overflow: visible;
             justify-content: center;
         }
@@ -36,9 +36,9 @@
     <nav class="nav">
         <ul> 
             <li><img src="logo.ico" alt="logo brasil" width="20"></li>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="contacto.html">Contactanos</a></li>
-            <li><a href="museo sencillo.html">Museos</a></li>
+            <li><a href="index.html" style="color: rgb(228, 214, 214);">Inicio</a></li>
+            <li><a href="contacto.html" style="color: rgb(228, 214, 214);"">Contactanos</a></li>
+            <li><a href="museo sencillo.html" style="color: rgb(228, 214, 214);"">Museos</a></li>
         </ul>
     </nav>
     <div class="contenedor">
@@ -149,7 +149,7 @@
         </div>
     </div>
     <footer>
-        <h5 style="color: white;"><strong>Derechos Reservados</strong></h5>
+        <h5 style="color: white; font-size: 20px; padding: 10px;"><strong>Derechos Reservados</strong></h5>
         <ul class="lista_footer">
             <a href="index.html" style="color: white;">Inicio</a></li>
             <li><a href="museo sencillo.html" style="color: white;">Museos</a></li>
