se centro los link del footer

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
             height: 100px;
             text-align: center;
             margin-top: 0px;
-            
             overflow: visible;
             justify-content: center;
+        }
+        footer ul{
+            padding-right: 40px;
         }
         .contenedor{
             text-align: center;
