correcion con el validador w3c

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,8 +39,8 @@
         <ul> 
             <li><img src="logo.ico" alt="logo brasil" width="20"></li>
             <li><a href="index.html" style="color: rgb(228, 214, 214);">Inicio</a></li>
-            <li><a href="contacto.html" style="color: rgb(228, 214, 214);"">Contactanos</a></li>
-            <li><a href="museo sencillo.html" style="color: rgb(228, 214, 214);"">Museos</a></li>
+            <li><a href="contacto.html" style="color: rgb(228, 214, 214);">Contactanos</a></li>
+            <li><a href="museo_sencillo.html" style="color: rgb(228, 214, 214);">Museos</a></li>
         </ul>
     </nav>
     <div class="contenedor">
@@ -153,10 +153,10 @@
     <footer>
         <h5 style="color: white; font-size: 20px; padding: 10px;"><strong>Derechos Reservados</strong></h5>
         <ul class="lista_footer">
-            <a href="index.html" style="color: white;">Inicio</a></li>
-            <li><a href="museo sencillo.html" style="color: white;">Museos</a></li>
+            <li><a href="index.html" style="color: white;">Inicio</a><li>
+            <li><a href="museo_sencillo.html" style="color: white;">Museos</a></li>
             <li><a href="contacto.html" style="color: white;">Contactanos</a></li>
-        </ul></p>
+        </ul>
     </footer>
 </div>
 </body>
