--- a/museo_sencillo.html
+++ b/museo_sencillo.html
@@ -5,18 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museos de Brasil  </title>
     <link rel="shortcut icon" href="bandera-de-brasil.png">
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="museo_sencillo.css">
+    <link rel="stylesheet" href="museo.css">
 </head>
 <h1 style="color: rgb(3, 88, 3); text-align: center; font-size: 50px;">Museos de Brasil</h1>
 
-<section>
+<section class="contenedor">
     <nav class="nav">
         <ul> 
             <li><img src="logo.ico" alt="logo brasil" width="20"></li>
-            <li><a href="index.html" style="color: rgb(228, 214, 214);">Inicio</a></li>
-            <li><a href="contacto.html" style="color: rgb(228, 214, 214);">Contactanos</a></li>
-            <li><a href="museo_sencillo.html" style="color: rgb(228, 214, 214);">Museos</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="contacto.html">Contactanos</a></li>
+            <li><a href="museo_sencillo.html">Museos</a></li>
         </ul>
     </nav>
         <div>
