se centro el nav en el css de  museo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
 <div>
-    <header>
+    <header class="band">
     <h1 style="color: rgb(37, 109, 37); text-align: center; font-size: 50px; background-color: rgb(228, 214, 214); ;" >Cultura de Brasil</h1>
     </header>
     <nav class="nav">
