--- a/museo_sencillo.html
+++ b/museo_sencillo.html
@@ -12,9 +12,9 @@
 <section class="contenedor">
     <nav class="nav">
         <ul> 
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="contacto.html">Contactanos</a></li>
-            <li><a href="museo_sencillo.html">Museos</a></li>
+            <li><a href="index.html" style="text-decoration: none; color: black;">Inicio</a></li>
+            <li><a href="contacto.html" style="text-decoration: none; color: black;"">Contactanos</a></li>
+            <li><a href="museo_sencillo.html" style="text-decoration: none; color: black;">Museos</a></li>
         </ul>
     </nav>
         <div>
