ahora el logo de brasil es el boton de inicio

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
     </header>
     <nav class="nav">
         <ul> 
-            <li><img src="logo.ico" alt="logo brasil" width="20"></li>
-            <li><a href="index.html" style="color: rgb(228, 214, 214);">Inicio</a></li>
+            <li><a href="index.html" style="color: rgb(228, 214, 214);"><img src="logo.ico" alt="logo brasil" width="20"></a></li>
             <li><a href="contacto.html" style="color: rgb(228, 214, 214);">Contactanos</a></li>
             <li><a href="museo_sencillo.html" style="color: rgb(228, 214, 214);">Museos</a></li>
         </ul>
