--- a/museo_sencillo.html
+++ b/museo_sencillo.html
@@ -12,7 +12,7 @@
 
     <nav class="nav">
         <ul> 
-            <li><a href="index.html" style="text-decoration: none; color: black;">Inicio</a></li>
+            <li><a href="index.html" style="color: rgb(228, 214, 214);"><img src="logo.ico" alt="logo brasil" width="20"></a></li>
             <li><a href="contacto.html" style="text-decoration: none; color: black;"">Contactanos</a></li>
             <li><a href="museo_sencillo.html" style="text-decoration: none; color: black;">Museos</a></li>
         </ul>
