actualizacion de links

--- a/Html/contacto.html
+++ b/Html/contacto.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="contacto.css">
-    <link rel="shortcut icon" href="logo.ico">
+    <link rel="stylesheet" href="/Pv_TP1_Grupo10/Css/contacto.css">
+    <link rel="shortcut icon" href="/Pv_TP1_Grupo10/assets/Imagenes_museo/logo.ico">
     <title>Contactanos</title>
 </head>
 <body >
