--- a/Html/index.html
+++ b/Html/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TP1 Grupo10</title>
-    <link rel="stylesheet" href="main.css">
-    <link rel="shortcut icon" href="logo.ico">
+    <link rel="stylesheet" href="/Pv_TP1_Grupo10/Css/main.css">
+    <link rel="shortcut icon" href="/Pv_TP1_Grupo10/assets/Imagenes_museo/logo.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -37,7 +37,7 @@
     </header>
     <nav class="nav">
         <ul> 
-            <li><a href="index.html" style="color: rgb(228, 214, 214);"><img src="logo.ico" alt="logo brasil" width="20"></a></li>
+            <li><a href="index.html" style="color: rgb(228, 214, 214);"><img src="/Pv_TP1_Grupo10/assets/Imagenes_museo/logo.ico" alt="logo brasil" width="20"></a></li>
             <li><a href="contacto.html" style="color: rgb(228, 214, 214);">Contactanos</a></li>
             <li><a href="museo_sencillo.html" style="color: rgb(228, 214, 214);">Museos</a></li>
         </ul>
