--- a/Html/museo.html
+++ b/Html/museo.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museos de Brasil  </title>
-    <link rel="shortcut icon" href="bandera-de-brasil.png">
-    <link rel="stylesheet" href="museo.css">
+    <link rel="shortcut icon" href="/Pv_TP1_Grupo10/assets/Imagenes_museo/bandera-de-brasil.png">
+    <link rel="stylesheet" href="/Pv_TP1_Grupo10/Css/museo.css">
 </head>
 <h1 style="color: rgb(3, 88, 3); text-align: center; font-size: 50px;">Museos de Brasil</h1>
 <main>
 
     <nav class="nav">
         <ul> 
-            <li><a href="index.html" style="color: rgb(228, 214, 214);"><img src="logo.ico" alt="logo brasil" width="20"></a></li>
+            <li><a href="index.html" style="color: rgb(228, 214, 214);"><img src="/Pv_TP1_Grupo10/assets/Imagenes_museo/logo.ico" alt="logo brasil" width="20"></a></li>
             <li><a href="contacto.html" style="text-decoration: none; color: black;"">Contactanos</a></li>
             <li><a href="museo_sencillo.html" style="text-decoration: none; color: black;">Museos</a></li>
         </ul>
