actualizacion de link, museos

--- a/Html/index.html
+++ b/Html/index.html
@@ -39,7 +39,7 @@
         <ul> 
             <li><a href="index.html" style="color: rgb(228, 214, 214);"><img src="/Pv_TP1_Grupo10/assets/Imagenes_museo/logo.ico" alt="logo brasil" width="20"></a></li>
             <li><a href="contacto.html" style="color: rgb(228, 214, 214);">Contactanos</a></li>
-            <li><a href="museo_sencillo.html" style="color: rgb(228, 214, 214);">Museos</a></li>
+            <li><a href="museo.html" style="color: rgb(228, 214, 214);">Museos</a></li>
         </ul>
     </nav>
     <div class="contenedor">
