se agrego el archivo js

--- a/Html/index.html
+++ b/Html/index.html
@@ -158,5 +158,6 @@
         </ul>
     </footer>
 </div>
+<script type="module" src="/Pv_TP1_Grupo10/Js/mian.js"></script>
 </body>
 </html>                                                
